// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductItemsList stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-2xl mx-auto"
  >
    <div
      class="space-y-4"
    >
      <div>
        <div
          class="relative"
          data-testid="sf-product-item-061492183589M"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl p-0 border border-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-3 py-4 md:px-6 md:py-7 relative overflow-hidden"
              data-slot="card-content"
            >
              <div
                class="grid md:grid-cols-[140px_1fr] grid-cols-[72px_1fr] gap-5 min-w-0"
              >
                <div
                  class="flex-shrink-0 flex items-center justify-center"
                >
                  <div
                    class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden md:w-32 w-16"
                  >
                    <img
                      alt="Men's Classic Deer Gloves, , small"
                      class="h-full w-full object-contain"
                      src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
                    />
                  </div>
                </div>
                <div
                  class="flex-1 space-y-3 min-w-0"
                >
                  <div
                    class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-6 min-w-0"
                  >
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="mb-4 flex items-start gap-2 min-w-0"
                      >
                        <h2
                          class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
                        >
                          <a
                            class="text-foreground hover:text-primary block break-words"
                            href="/product/TG508M"
                            title="Men's Classic Deer Gloves"
                            to="/product/TG508M"
                          >
                            Men's Classic Deer Gloves
                          </a>
                        </h2>
                      </div>
                      <div>
                        <div
                          class="text-sm text-muted-foreground space-y-1 mb-1"
                        >
                          <div>
                            Size
                            : 
                            L
                          </div>
                        </div>
                      </div>
                      <p
                        class="text-sm text-muted-foreground leading-relaxed text-left break-words"
                      >
                        These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
                      </p>
                      <div
                        class="min-w-0"
                      />
                    </div>
                    <div
                      class="text-right md:hidden"
                      data-testid="mobile-product-price"
                    >
                      <div
                        class="font-semibold text-base"
                      >
                        <div
                          class="items-center gap-2 text-card-foreground text-right font-semibold text-sm leading-none relative"
                        >
                          <span
                            aria-label="Current price: £99.99"
                            aria-live="polite"
                            class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                          >
                            £99.99
                          </span>
                          <span
                            aria-atomic="true"
                            aria-live="polite"
                            class="sr-only"
                          >
                            Men's Classic Deer Gloves
                            Current price: £99.99
                          </span>
                           
                        </div>
                      </div>
                    </div>
                    <div
                      class="grid gap-4 justify-items-end flex-shrink-0"
                    >
                      <div>
                        <label
                          class="items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm text-muted-foreground mb-2 block text-right"
                          data-slot="label"
                          for="quantity"
                        >
                          Quantity:
                        </label>
                        <div
                          class="inline-flex items-center border border-input rounded-lg"
                        >
                          <button
                            aria-label="Decrement Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-l-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-decrement"
                            disabled=""
                          >
                            −
                          </button>
                          <input
                            aria-label="Quantity:"
                            class="w-10 text-center text-sm text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                            min="0"
                            step="1"
                            type="number"
                            value="1"
                          />
                          <button
                            aria-label="Increment Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-r-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-increment"
                          >
                            +
                          </button>
                        </div>
                      </div>
                      <div
                        class="self-end"
                      >
                        <div
                          class="text-right hidden md:block"
                          data-testid="desktop-product-price"
                        >
                          <div
                            class="font-semibold text-base"
                          >
                            <div
                              class="items-center gap-2"
                            >
                              <span
                                aria-label="Current price: £99.99"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-lg text-right font-semibold leading-none relative"
                              >
                                £99.99
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Men's Classic Deer Gloves
                                Current price: £99.99
                              </span>
                               
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="relative"
          data-testid="sf-product-item-061492183589M"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl p-0 border border-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-3 py-4 md:px-6 md:py-7 relative overflow-hidden"
              data-slot="card-content"
            >
              <div
                class="grid md:grid-cols-[140px_1fr] grid-cols-[72px_1fr] gap-5 min-w-0"
              >
                <div
                  class="flex-shrink-0 flex items-center justify-center"
                >
                  <div
                    class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden md:w-32 w-16"
                  >
                    <img
                      alt="Men's Classic Deer Gloves, , small"
                      class="h-full w-full object-contain"
                      src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
                    />
                  </div>
                </div>
                <div
                  class="flex-1 space-y-3 min-w-0"
                >
                  <div
                    class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-6 min-w-0"
                  >
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="mb-4 flex items-start gap-2 min-w-0"
                      >
                        <h2
                          class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
                        >
                          <a
                            class="text-foreground hover:text-primary block break-words"
                            href="/product/TG508M"
                            title="Men's Classic Deer Gloves"
                            to="/product/TG508M"
                          >
                            Men's Classic Deer Gloves
                          </a>
                        </h2>
                      </div>
                      <div>
                        <div
                          class="text-sm text-muted-foreground space-y-1 mb-1"
                        >
                          <div>
                            Size
                            : 
                            L
                          </div>
                        </div>
                      </div>
                      <p
                        class="text-sm text-muted-foreground leading-relaxed text-left break-words"
                      >
                        These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
                      </p>
                      <div
                        class="min-w-0"
                      />
                    </div>
                    <div
                      class="text-right md:hidden"
                      data-testid="mobile-product-price"
                    >
                      <div
                        class="font-semibold text-base"
                      >
                        <div
                          class="items-center gap-2 text-card-foreground text-right font-semibold text-sm leading-none relative"
                        >
                          <span
                            aria-label="Current price: £199.98"
                            aria-live="polite"
                            class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                          >
                            £199.98
                          </span>
                          <span
                            aria-atomic="true"
                            aria-live="polite"
                            class="sr-only"
                          >
                            Men's Classic Deer Gloves
                            Current price: £199.98
                          </span>
                           
                        </div>
                      </div>
                      <div
                        class="text-muted-foreground text-sm"
                      >
                        £50.00
                         
                        each
                      </div>
                    </div>
                    <div
                      class="grid gap-4 justify-items-end flex-shrink-0"
                    >
                      <div>
                        <label
                          class="items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm text-muted-foreground mb-2 block text-right"
                          data-slot="label"
                          for="quantity"
                        >
                          Quantity:
                        </label>
                        <div
                          class="inline-flex items-center border border-input rounded-lg"
                        >
                          <button
                            aria-label="Decrement Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-l-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-decrement"
                          >
                            −
                          </button>
                          <input
                            aria-label="Quantity:"
                            class="w-10 text-center text-sm text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                            min="0"
                            step="1"
                            type="number"
                            value="2"
                          />
                          <button
                            aria-label="Increment Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-r-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-increment"
                          >
                            +
                          </button>
                        </div>
                      </div>
                      <div
                        class="self-end"
                      >
                        <div
                          class="text-right hidden md:block"
                          data-testid="desktop-product-price"
                        >
                          <div
                            class="font-semibold text-base"
                          >
                            <div
                              class="items-center gap-2"
                            >
                              <span
                                aria-label="Current price: £199.98"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-lg text-right font-semibold leading-none relative"
                              >
                                £199.98
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Men's Classic Deer Gloves
                                Current price: £199.98
                              </span>
                               
                            </div>
                          </div>
                          <div
                            class="text-muted-foreground text-sm"
                          >
                            £50.00
                             
                            each
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductItemsList stories snapshot > Interactive story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-2xl mx-auto"
  >
    <div
      class="space-y-4"
    >
      <div>
        <div
          class="relative"
          data-testid="sf-product-item-061492183589M"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl p-0 border border-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-3 py-4 md:px-6 md:py-7 relative overflow-hidden"
              data-slot="card-content"
            >
              <div
                class="grid md:grid-cols-[140px_1fr] grid-cols-[72px_1fr] gap-5 min-w-0"
              >
                <div
                  class="flex-shrink-0 flex items-center justify-center"
                >
                  <div
                    class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden md:w-32 w-16"
                  >
                    <img
                      alt="Men's Classic Deer Gloves, , small"
                      class="h-full w-full object-contain"
                      src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
                    />
                  </div>
                </div>
                <div
                  class="flex-1 space-y-3 min-w-0"
                >
                  <div
                    class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-6 min-w-0"
                  >
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="mb-4 flex items-start gap-2 min-w-0"
                      >
                        <h2
                          class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
                        >
                          <a
                            class="text-foreground hover:text-primary block break-words"
                            href="/product/TG508M"
                            title="Men's Classic Deer Gloves"
                            to="/product/TG508M"
                          >
                            Men's Classic Deer Gloves
                          </a>
                        </h2>
                      </div>
                      <div>
                        <div
                          class="text-sm text-muted-foreground space-y-1 mb-1"
                        >
                          <div>
                            Size
                            : 
                            L
                          </div>
                        </div>
                      </div>
                      <p
                        class="text-sm text-muted-foreground leading-relaxed text-left break-words"
                      >
                        These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
                      </p>
                      <div
                        class="min-w-0"
                      >
                        <div
                          data-testid="mobile-primary-action"
                        >
                          <button
                            data-testid="remove-item-1"
                            type="button"
                          >
                            Remove 
                            item-1
                          </button>
                        </div>
                        <button
                          data-testid="edit-item"
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                    <div
                      class="text-right md:hidden"
                      data-testid="mobile-product-price"
                    >
                      <div
                        class="font-semibold text-base"
                      >
                        <div
                          class="items-center gap-2 text-card-foreground text-right font-semibold text-sm leading-none relative"
                        >
                          <span
                            aria-label="Current price: £99.99"
                            aria-live="polite"
                            class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                          >
                            £99.99
                          </span>
                          <span
                            aria-atomic="true"
                            aria-live="polite"
                            class="sr-only"
                          >
                            Men's Classic Deer Gloves
                            Current price: £99.99
                          </span>
                           
                        </div>
                      </div>
                    </div>
                    <div
                      class="grid gap-4 justify-items-end flex-shrink-0"
                    >
                      <div>
                        <label
                          class="items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm text-muted-foreground mb-2 block text-right"
                          data-slot="label"
                          for="quantity"
                        >
                          Quantity:
                        </label>
                        <div
                          class="inline-flex items-center border border-input rounded-lg"
                        >
                          <button
                            aria-label="Decrement Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-l-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-decrement"
                            disabled=""
                          >
                            −
                          </button>
                          <input
                            aria-label="Quantity:"
                            class="w-10 text-center text-sm text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                            min="0"
                            step="1"
                            type="number"
                            value="1"
                          />
                          <button
                            aria-label="Increment Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-r-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-increment"
                          >
                            +
                          </button>
                        </div>
                      </div>
                      <div
                        class="self-end"
                      >
                        <div
                          class="text-right hidden md:block"
                          data-testid="desktop-product-price"
                        >
                          <div
                            class="font-semibold text-base"
                          >
                            <div
                              class="items-center gap-2"
                            >
                              <span
                                aria-label="Current price: £99.99"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-lg text-right font-semibold leading-none relative"
                              >
                                £99.99
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Men's Classic Deer Gloves
                                Current price: £99.99
                              </span>
                               
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="relative"
          data-testid="sf-product-item-061492183589M"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl p-0 border border-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-3 py-4 md:px-6 md:py-7 relative overflow-hidden"
              data-slot="card-content"
            >
              <div
                class="grid md:grid-cols-[140px_1fr] grid-cols-[72px_1fr] gap-5 min-w-0"
              >
                <div
                  class="flex-shrink-0 flex items-center justify-center"
                >
                  <div
                    class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden md:w-32 w-16"
                  >
                    <img
                      alt="Men's Classic Deer Gloves, , small"
                      class="h-full w-full object-contain"
                      src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
                    />
                  </div>
                </div>
                <div
                  class="flex-1 space-y-3 min-w-0"
                >
                  <div
                    class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-6 min-w-0"
                  >
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="mb-4 flex items-start gap-2 min-w-0"
                      >
                        <h2
                          class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
                        >
                          <a
                            class="text-foreground hover:text-primary block break-words"
                            href="/product/TG508M"
                            title="Men's Classic Deer Gloves"
                            to="/product/TG508M"
                          >
                            Men's Classic Deer Gloves
                          </a>
                        </h2>
                      </div>
                      <div>
                        <div
                          class="text-sm text-muted-foreground space-y-1 mb-1"
                        >
                          <div>
                            Size
                            : 
                            L
                          </div>
                        </div>
                      </div>
                      <p
                        class="text-sm text-muted-foreground leading-relaxed text-left break-words"
                      >
                        These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
                      </p>
                      <div
                        class="min-w-0"
                      >
                        <div
                          data-testid="mobile-primary-action"
                        >
                          <button
                            data-testid="remove-item-2"
                            type="button"
                          >
                            Remove 
                            item-2
                          </button>
                        </div>
                        <button
                          data-testid="edit-item"
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                    <div
                      class="text-right md:hidden"
                      data-testid="mobile-product-price"
                    >
                      <div
                        class="font-semibold text-base"
                      >
                        <div
                          class="items-center gap-2 text-card-foreground text-right font-semibold text-sm leading-none relative"
                        >
                          <span
                            aria-label="Current price: £199.98"
                            aria-live="polite"
                            class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                          >
                            £199.98
                          </span>
                          <span
                            aria-atomic="true"
                            aria-live="polite"
                            class="sr-only"
                          >
                            Men's Classic Deer Gloves
                            Current price: £199.98
                          </span>
                           
                        </div>
                      </div>
                      <div
                        class="text-muted-foreground text-sm"
                      >
                        £50.00
                         
                        each
                      </div>
                    </div>
                    <div
                      class="grid gap-4 justify-items-end flex-shrink-0"
                    >
                      <div>
                        <label
                          class="items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm text-muted-foreground mb-2 block text-right"
                          data-slot="label"
                          for="quantity"
                        >
                          Quantity:
                        </label>
                        <div
                          class="inline-flex items-center border border-input rounded-lg"
                        >
                          <button
                            aria-label="Decrement Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-l-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-decrement"
                          >
                            −
                          </button>
                          <input
                            aria-label="Quantity:"
                            class="w-10 text-center text-sm text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                            min="0"
                            step="1"
                            type="number"
                            value="2"
                          />
                          <button
                            aria-label="Increment Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-r-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-increment"
                          >
                            +
                          </button>
                        </div>
                      </div>
                      <div
                        class="self-end"
                      >
                        <div
                          class="text-right hidden md:block"
                          data-testid="desktop-product-price"
                        >
                          <div
                            class="font-semibold text-base"
                          >
                            <div
                              class="items-center gap-2"
                            >
                              <span
                                aria-label="Current price: £199.98"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-lg text-right font-semibold leading-none relative"
                              >
                                £199.98
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Men's Classic Deer Gloves
                                Current price: £199.98
                              </span>
                               
                            </div>
                          </div>
                          <div
                            class="text-muted-foreground text-sm"
                          >
                            £50.00
                             
                            each
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductItemsList stories snapshot > SummaryVariant story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-2xl mx-auto"
  >
    <div
      class="space-y-5"
    >
      <div>
        <div
          class="grid md:grid-cols-[112px_1fr] grid-cols-[72px_1fr] gap-4"
          data-testid="sf-product-item-summary-061492183589M"
        >
          <div
            class="flex items-center justify-center"
          >
            <div
              class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden w-16"
            >
              <img
                alt="Men's Classic Deer Gloves, , small"
                class="h-full w-full object-contain"
                src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
              />
            </div>
          </div>
          <div
            class="flex-1 space-y-1 min-w-0"
          >
            <div
              class="mb-4 flex items-start gap-2 min-w-0"
            >
              <h2
                class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
              >
                <a
                  class="text-foreground hover:text-primary block break-words"
                  href="/product/TG508M"
                  title="Men's Classic Deer Gloves"
                  to="/product/TG508M"
                >
                  Men's Classic Deer Gloves
                </a>
              </h2>
            </div>
            <div>
              <div
                class="text-sm text-muted-foreground"
              >
                Qty:
                 
                1
              </div>
              <div
                class="text-sm text-muted-foreground space-y-1 mb-1"
              >
                <div>
                  Size
                  : 
                  L
                </div>
              </div>
            </div>
            <div
              class="items-center gap-2 text-sm"
            >
              <span
                aria-label="Current price: £99.99"
                aria-live="polite"
                class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                Current price: £99.99
              </span>
               
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="grid md:grid-cols-[112px_1fr] grid-cols-[72px_1fr] gap-4"
          data-testid="sf-product-item-summary-061492183589M"
        >
          <div
            class="flex items-center justify-center"
          >
            <div
              class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden w-16"
            >
              <img
                alt="Men's Classic Deer Gloves, , small"
                class="h-full w-full object-contain"
                src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
              />
            </div>
          </div>
          <div
            class="flex-1 space-y-1 min-w-0"
          >
            <div
              class="mb-4 flex items-start gap-2 min-w-0"
            >
              <h2
                class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
              >
                <a
                  class="text-foreground hover:text-primary block break-words"
                  href="/product/TG508M"
                  title="Men's Classic Deer Gloves"
                  to="/product/TG508M"
                >
                  Men's Classic Deer Gloves
                </a>
              </h2>
            </div>
            <div>
              <div
                class="text-sm text-muted-foreground"
              >
                Qty:
                 
                2
              </div>
              <div
                class="text-sm text-muted-foreground space-y-1 mb-1"
              >
                <div>
                  Size
                  : 
                  L
                </div>
              </div>
            </div>
            <div
              class="items-center gap-2 text-sm"
            >
              <span
                aria-label="Current price: £99.99"
                aria-live="polite"
                class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                Current price: £99.99
              </span>
               
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductItemsList stories snapshot > WithActions story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-2xl mx-auto"
  >
    <div
      class="space-y-4"
    >
      <div>
        <div
          class="relative"
          data-testid="sf-product-item-061492183589M"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl p-0 border border-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-3 py-4 md:px-6 md:py-7 relative overflow-hidden"
              data-slot="card-content"
            >
              <div
                class="grid md:grid-cols-[140px_1fr] grid-cols-[72px_1fr] gap-5 min-w-0"
              >
                <div
                  class="flex-shrink-0 flex items-center justify-center"
                >
                  <div
                    class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden md:w-32 w-16"
                  >
                    <img
                      alt="Men's Classic Deer Gloves, , small"
                      class="h-full w-full object-contain"
                      src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
                    />
                  </div>
                </div>
                <div
                  class="flex-1 space-y-3 min-w-0"
                >
                  <div
                    class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-6 min-w-0"
                  >
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="mb-4 flex items-start gap-2 min-w-0"
                      >
                        <h2
                          class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
                        >
                          <a
                            class="text-foreground hover:text-primary block break-words"
                            href="/product/TG508M"
                            title="Men's Classic Deer Gloves"
                            to="/product/TG508M"
                          >
                            Men's Classic Deer Gloves
                          </a>
                        </h2>
                      </div>
                      <div>
                        <div
                          class="text-sm text-muted-foreground space-y-1 mb-1"
                        >
                          <div>
                            Size
                            : 
                            L
                          </div>
                        </div>
                      </div>
                      <p
                        class="text-sm text-muted-foreground leading-relaxed text-left break-words"
                      >
                        These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
                      </p>
                      <div
                        class="min-w-0"
                      >
                        <div
                          data-testid="mobile-primary-action"
                        >
                          <button
                            class="text-destructive"
                          >
                            Remove 
                            item-1
                          </button>
                        </div>
                        <button
                          class="text-primary"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                    <div
                      class="text-right md:hidden"
                      data-testid="mobile-product-price"
                    >
                      <div
                        class="font-semibold text-base"
                      >
                        <div
                          class="items-center gap-2 text-card-foreground text-right font-semibold text-sm leading-none relative"
                        >
                          <span
                            aria-label="Current price: £99.99"
                            aria-live="polite"
                            class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                          >
                            £99.99
                          </span>
                          <span
                            aria-atomic="true"
                            aria-live="polite"
                            class="sr-only"
                          >
                            Men's Classic Deer Gloves
                            Current price: £99.99
                          </span>
                           
                        </div>
                      </div>
                    </div>
                    <div
                      class="grid gap-4 justify-items-end flex-shrink-0"
                    >
                      <div>
                        <label
                          class="items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm text-muted-foreground mb-2 block text-right"
                          data-slot="label"
                          for="quantity"
                        >
                          Quantity:
                        </label>
                        <div
                          class="inline-flex items-center border border-input rounded-lg"
                        >
                          <button
                            aria-label="Decrement Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-l-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-decrement"
                            disabled=""
                          >
                            −
                          </button>
                          <input
                            aria-label="Quantity:"
                            class="w-10 text-center text-sm text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                            min="0"
                            step="1"
                            type="number"
                            value="1"
                          />
                          <button
                            aria-label="Increment Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-r-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-increment"
                          >
                            +
                          </button>
                        </div>
                      </div>
                      <div
                        class="self-end"
                      >
                        <div
                          class="text-right hidden md:block"
                          data-testid="desktop-product-price"
                        >
                          <div
                            class="font-semibold text-base"
                          >
                            <div
                              class="items-center gap-2"
                            >
                              <span
                                aria-label="Current price: £99.99"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-lg text-right font-semibold leading-none relative"
                              >
                                £99.99
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Men's Classic Deer Gloves
                                Current price: £99.99
                              </span>
                               
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="relative"
          data-testid="sf-product-item-061492183589M"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl p-0 border border-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-3 py-4 md:px-6 md:py-7 relative overflow-hidden"
              data-slot="card-content"
            >
              <div
                class="grid md:grid-cols-[140px_1fr] grid-cols-[72px_1fr] gap-5 min-w-0"
              >
                <div
                  class="flex-shrink-0 flex items-center justify-center"
                >
                  <div
                    class="bg-muted rounded flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden md:w-32 w-16"
                  >
                    <img
                      alt="Men's Classic Deer Gloves, , small"
                      class="h-full w-full object-contain"
                      src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwd4659c06/images/small/TG508_206.webp?sfrm=jpg&q=70"
                    />
                  </div>
                </div>
                <div
                  class="flex-1 space-y-3 min-w-0"
                >
                  <div
                    class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-6 min-w-0"
                  >
                    <div
                      class="min-w-0"
                    >
                      <div
                        class="mb-4 flex items-start gap-2 min-w-0"
                      >
                        <h2
                          class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
                        >
                          <a
                            class="text-foreground hover:text-primary block break-words"
                            href="/product/TG508M"
                            title="Men's Classic Deer Gloves"
                            to="/product/TG508M"
                          >
                            Men's Classic Deer Gloves
                          </a>
                        </h2>
                      </div>
                      <div>
                        <div
                          class="text-sm text-muted-foreground space-y-1 mb-1"
                        >
                          <div>
                            Size
                            : 
                            L
                          </div>
                        </div>
                      </div>
                      <p
                        class="text-sm text-muted-foreground leading-relaxed text-left break-words"
                      >
                        These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
                      </p>
                      <div
                        class="min-w-0"
                      >
                        <div
                          data-testid="mobile-primary-action"
                        >
                          <button
                            class="text-destructive"
                          >
                            Remove 
                            item-2
                          </button>
                        </div>
                        <button
                          class="text-primary"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                    <div
                      class="text-right md:hidden"
                      data-testid="mobile-product-price"
                    >
                      <div
                        class="font-semibold text-base"
                      >
                        <div
                          class="items-center gap-2 text-card-foreground text-right font-semibold text-sm leading-none relative"
                        >
                          <span
                            aria-label="Current price: £199.98"
                            aria-live="polite"
                            class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                          >
                            £199.98
                          </span>
                          <span
                            aria-atomic="true"
                            aria-live="polite"
                            class="sr-only"
                          >
                            Men's Classic Deer Gloves
                            Current price: £199.98
                          </span>
                           
                        </div>
                      </div>
                      <div
                        class="text-muted-foreground text-sm"
                      >
                        £50.00
                         
                        each
                      </div>
                    </div>
                    <div
                      class="grid gap-4 justify-items-end flex-shrink-0"
                    >
                      <div>
                        <label
                          class="items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm text-muted-foreground mb-2 block text-right"
                          data-slot="label"
                          for="quantity"
                        >
                          Quantity:
                        </label>
                        <div
                          class="inline-flex items-center border border-input rounded-lg"
                        >
                          <button
                            aria-label="Decrement Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-l-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-decrement"
                          >
                            −
                          </button>
                          <input
                            aria-label="Quantity:"
                            class="w-10 text-center text-sm text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                            min="0"
                            step="1"
                            type="number"
                            value="2"
                          />
                          <button
                            aria-label="Increment Quantity for the product"
                            class="px-3 py-2 text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-r-lg disabled:opacity-50 disabled:cursor-not-allowed"
                            data-testid="quantity-increment"
                          >
                            +
                          </button>
                        </div>
                      </div>
                      <div
                        class="self-end"
                      >
                        <div
                          class="text-right hidden md:block"
                          data-testid="desktop-product-price"
                        >
                          <div
                            class="font-semibold text-base"
                          >
                            <div
                              class="items-center gap-2"
                            >
                              <span
                                aria-label="Current price: £199.98"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-lg text-right font-semibold leading-none relative"
                              >
                                £199.98
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Men's Classic Deer Gloves
                                Current price: £199.98
                              </span>
                               
                            </div>
                          </div>
                          <div
                            class="text-muted-foreground text-sm"
                          >
                            £50.00
                             
                            each
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
